test/tests/errors/error-ref-no-cont-non-pointer.sm
// true
// false
// false
/**/
/**/

program {
    output cont (true ? 1 : ref 1);
}